EXTRA_DIST =

SUBDIRS = src gphoto-m4 Sample doc

ACLOCAL_AMFLAGS = -I m4 -I gphoto-m4 -I shamrock

EXTRA_DIST += README.shamrock COPYING.shamrock

EXTRA_DIST += shamrock/expansions.m4
EXTRA_DIST += shamrock/gstreamer.m4
EXTRA_DIST += shamrock/i18n.m4
EXTRA_DIST += shamrock/monodoc.m4
EXTRA_DIST += shamrock/mono.m4
EXTRA_DIST += shamrock/mono-nunit.m4
EXTRA_DIST += shamrock/programs.m4
EXTRA_DIST += shamrock/util.m4
